# ooni-detection

./: README.md
detector/: CMakeLists.txt  DETECTOR_DOXYGEN  deploy.sh  output.txt  start_local.sh  start_on_oonid.sh
detector/configurations/: facebook_messenger.sh  https_backend.sh  telegram.sh  whatsapp.sh
detector/host_config/: mobile_router_nat.sh  router_nat.sh
detector/include/: debug.h  det.h  util.h
detector/include/protocol/: http.h  tls.h
detector/include/queue/: accept_all.h  deny_dns.h
detector/include/queue/detect_ooni/: expiring_queue.h  facebook_messenger.h  https_backend.h  status_queue.h  telegram.h  whatsapp.h
detector/src/: det.cpp  util.cpp
detector/src/protocol/: http.cpp
detector/src/queue/: accept_all.cpp  deny_dns.cpp
detector/src/queue/detect_ooni/: facebook_messenger.cpp  https_backend.cpp  status_queue.cpp  telegram.cpp  whatsapp.cpp
detector/vm_config/: router_config.sh
research/capturing_forwarding/libtins_detector/: CMakeLists.txt  deploy.sh  detector.cfg  start.sh  start_on_oonid.sh
research/capturing_forwarding/libtins_detector/host_config/: reset_host.sh  router_nat.sh
research/capturing_forwarding/libtins_detector/include/: det.h  det_dns.h  router.h
research/capturing_forwarding/libtins_detector/src/: det.cpp  det.h  det_dns.cpp  oonid.cpp  router.cpp
research/capturing_forwarding/libtins_detector/vm_config/: external_config.sh  internal_config.sh
research/capturing_forwarding/nfqueue_detector/: CMakeLists.txt  deploy.sh  start_on_oonid.sh
research/capturing_forwarding/nfqueue_detector/include/: det.h
research/capturing_forwarding/nfqueue_detector/src/: det.cpp
research/capturing_forwarding/nfqueue_detector/src/queue/: deny_dns.cpp
research/capturing_forwarding/nfqueue_detector/vm_config/: internal_config.sh  router_config.sh
research/capturing_forwarding/suricata_detector/: deploy.sh  start_on_oonid.sh
research/capturing_forwarding/suricata_detector/rules/: block_dns.rules  suri.rules  tuwien.rules
research/capturing_forwarding/suricata_detector/vm_config/: external_config.sh  router_config.sh
